[package]
name = "frostgate-node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
frostgate-sdk = { path = "../frostgate-sdk" }
frostgate-relayer = { path = "../frostgate-relayer" }
frostgate-verifier = { path = "../frostgate-verifier" }
frostgate-prover = { path = "../frostgate-prover" }